[package]
name = "hitman-commons"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
tryvial = "0.2.0"
rpkg-rs = { version = "1.4.0", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
fast-md5 = "1.0.0"
specta = { version = "=2.0.0-rc.24", features = ["derive"], optional = true }
brotli-decompressor = { version = "5.0.3", optional = true }
serde-smile = { version = "0.3.1", optional = true }
tonytools = { git = "https://github.com/AnthonyFuller/tonytools-rs", optional = true }
schemars = { version = "1.2.1", optional = true }
registry = { version = "1.2.3", optional = true }
keyvalues-serde = { version = "0.2.4", optional = true }
itertools = { version = "0.14.0", optional = true }
home = { version = "0.5.9", optional = true }
rune = { git = "https://github.com/rune-rs/rune", rev = "a8c4f97", optional = true }
better-rune-derive = { git = "https://github.com/atampy25/better-rune-derive", optional = true }
serde_with = { version = "3.21.0", optional = true }
glacier-texture = { version = "2.1.0", optional = true, default-features = false }
rkyv = { version = "0.8.11", optional = true }
arc-swap = { version = "1.7.1", features = ["serde"] }
ecow = "0.3.0"
papaya = "0.2.3"
static_init = "1.0.4"
identity-hash = "0.1.0"
lhash = { version = "1.1.0", optional = true, features = ["md5"] }

[features]
schemars = ["dep:schemars"]
rpkg-rs = ["dep:rpkg-rs"]
glacier-texture = ["dep:glacier-texture"]
tonytools = ["dep:tonytools"]
serde = ["dep:serde", "ecow/serde", "dep:serde_with"]
resourcelib = ["dep:serde_json"]
specta = ["serde", "dep:specta"]
hash-list = ["serde", "dep:brotli-decompressor", "dep:serde-smile"]
game-detection = [
    "serde",
    "dep:registry",
    "dep:serde_json",
    "dep:keyvalues-serde",
    "dep:itertools",
    "dep:home",
]
rune = ["dep:rune", "dep:better-rune-derive", "dep:serde_with"]
rkyv = ["dep:rkyv"]
macros = ["dep:lhash"]
